       uversionsmangle to add the Debian specific string. Patch
       by Raphael Geissert.  (Closes: #485879)
  
  * doc/CREDITS:
    + [FL] Add Raphael Geissert and Adam D. Barratt.
  
  * debian/copyright:
    + [FL] Add Patrick Schoenfeld (for checks/watch-file).
  
  * lib/Lintian/Collect/Binary.pm:
    + [FL] Add support for file-info file.
  
  * reporting/html_reports:
    + [FL] Mark the tag pages with the correct code.
  * reporting/templates/tag.tmpl:
    + [FL] Mark overridden tags.
  * reporting/templates/maintainer.tmpl:
    + [FL] Add useful links for each source package.
      With layout help by Jordà Polo.

 --

lintian (1.24.1) unstable; urgency=medium
  
  The "mostly for the benefit of lintian.debian.org only" release.

  * frontend/lintian:
    + [FL] Increase LAB_FORMAT to 8. This should have happened
      in 1.23.47, since the unpack-binpkg-l1 then produced a
      new file which checks depend upon.  Since this only
      affects static labs and only if packages get rechecked
      (i.e. not on harness -i runs) it only got noticed now.
      Use urgency=medium for this fix.
  
  * checks/watch-file:
    + [FL] Fix the order of two regular expression to use
      the more specific one first.  Patch by Raphael Geissert.
      (Closes: #485884)
  
  * unpack/unpack-binpkg-l1:
    + [FL] Don't include version number from Source: field in
      the source symlink.  Noted by RA.  (Closes: #485474)
  
  * lib/Lintian/Collect/Binary.pm:
    + [FL] New module for retrieving binary package information.
  
  * reporting/checkout-release:
    + [FL] New helper script for lintian.d.o maintenance.
  * reporting/config:
    + [FL] Generate files in $HOME/www directly instead
      of $HOME/www/reports.
  * reporting/html_reports:
    + [FL] Allow inclusion of the new shared templates by
      convenient functions. Remove some duplicated data
      setting while I'm on it.
    + [FL] Generate the manual and lintian.log symlinks